Switch basic test from standalone to cluster mode
The standalone server mode hangs on the first DDL operation (CREATE
TABLE) for >10 minutes on CI, even though SELECT queries work fine.
This only happens in standalone mode - cluster mode with ZK+BK works
reliably. Switch the basic test to cluster mode which is also the
primary deployment mode being tested.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>